--- a/Genie/Templates/Infrastructure/Models/Relation.tt
+++ b/Genie/Templates/Infrastructure/Models/Relation.tt
@@ -31,6 +31,7 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure.Models
 		    I<#=name#>FilterContext Where { get; }
 		    I<#=name#>OrderContext OrderBy { get; }
 	        IEnumerable<Concrete.<#=name#>> Query(IDbTransaction transaction = null);
+			I<#=name#>OrderContext Filter(IEnumerable<IPropertyFilter> filters);
 	        int Count(IDbTransaction transaction = null);
 	    }
 
@@ -149,6 +150,11 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure.Models
 	        {
                 return _repo.Count(GetQuery(transaction));
 	        }
+
+			public I<#=name#>OrderContext Filter(IEnumerable<IPropertyFilter> filters) 
+			{
+				
+			}
 
 	        private IRepoQuery GetQuery(IDbTransaction transaction)
 	        {
