--- a/Genie/Templates/Infrastructure/Models/Relation.tt
+++ b/Genie/Templates/Infrastructure/Models/Relation.tt
@@ -153,7 +153,7 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure.Models
 
 			public I<#=name#>OrderContext Filter(IEnumerable<IPropertyFilter> filters) 
 			{
-				
+				return this;	
 			}
 
 	        private IRepoQuery GetQuery(IDbTransaction transaction)
