--- a/Genie/Templates/Infrastructure/Filters/Abstract/IPropertyFilter.tt
+++ b/Genie/Templates/Infrastructure/Filters/Abstract/IPropertyFilter.tt
@@ -12,7 +12,7 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure.Filters.Abstract
         /// <summary>
         /// Expression type
         /// </summary>
-        FilterType Type { get; set; }
+        string Type { get; set; }
             
         /// <summary>
         /// Value if available
