--- a/Genie/Templates/Infrastructure/DapperContext.tt
+++ b/Genie/Templates/Infrastructure/DapperContext.tt
@@ -29,12 +29,15 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure
         /// </summary>
         public IDbConnection Connection
         {
-			if(_connection = null) 
-				_connection = new SqlConnection(_connectionString);
-			if(_connection.State != ConnectionState.Open)
-				_connection.Open();
+		    get
+		    {
+                if (_connection == null)
+                    _connection = new SqlConnection(_connectionString);
+                if (_connection.State != ConnectionState.Open)
+                    _connection.Open();
 
-			return _connection;
+                return _connection;
+            }
         }
 
         public IUnitOfWork Unit() 
