--- a/Genie/Templates/Infrastructure/Filters/Concrete/PropertyFilter.tt
+++ b/Genie/Templates/Infrastructure/Filters/Concrete/PropertyFilter.tt
@@ -7,7 +7,7 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure.Filters.Concrete
     internal class PropertyFilter : IPropertyFilter
     {
         public string PropertyName { get; set; }
-        public FilterType Type { get; set; }
+        public string Type { get; set; }
         public object Value { get; set; }
     }
 }
