--- a/Genie/Templates/Infrastructure/Filters/Concrete/RepoQuery.tt
+++ b/Genie/Templates/Infrastructure/Filters/Concrete/RepoQuery.tt
@@ -1,6 +1,7 @@
 ﻿<#@ template language="C#" #>
 <#@ import namespace="Genie.Base" #>
 using System.Collections.Generic;
+using System.Data;
 using <#=GenerationContext.BaseNamespace#>.Infrastructure.Filters.Abstract;
 
 namespace <#=GenerationContext.BaseNamespace#>.Infrastructure.Filters.Concrete
