--- a/Genie/Templates/Infrastructure/Models/Relation.tt
+++ b/Genie/Templates/Infrastructure/Models/Relation.tt
@@ -31,7 +31,7 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure.Models
 		    I<#=name#>FilterContext Where { get; }
 		    I<#=name#>OrderContext OrderBy { get; }
 	        IEnumerable<Concrete.<#=name#>> Query(IDbTransaction transaction = null);
-			I<#=name#>OrderContext Filter(IEnumerable<IPropertyFilter> filters);
+			I<#=name#>QueryContext Filter(IEnumerable<IPropertyFilter> filters);
 	        int Count(IDbTransaction transaction = null);
 	    }
 
@@ -151,7 +151,7 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure.Models
                 return _repo.Count(GetQuery(transaction));
 	        }
 
-			public I<#=name#>OrderContext Filter(IEnumerable<IPropertyFilter> filters) 
+			public I<#=name#>QueryContext Filter(IEnumerable<IPropertyFilter> filters) 
 			{
 				return this;	
 			}
