--- a/Genie/Templates/Infrastructure/Models/View.tt
+++ b/Genie/Templates/Infrastructure/Models/View.tt
@@ -26,7 +26,7 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure.Models
 		    I<#=name#>FilterContext Where { get; }
 		    I<#=name#>OrderContext OrderBy { get; }
 	        IEnumerable<Concrete.<#=name#>> Query(IDbTransaction transaction = null);
-			I<#=name#>OrderContext Filter(IEnumerable<IPropertyFilter> filters);
+			I<#=name#>QueryContext Filter(IEnumerable<IPropertyFilter> filters);
 	        int Count(IDbTransaction transaction = null);
 	    }
 
@@ -58,6 +58,7 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure.Models
         [Table("[dbo].[<#=name#>]")]
         public class <#=name#> 
         {
+
 <#foreach(var atd in entity.Attributes){#>
 		    public <#=atd.DataType#> <#=atd.Name#> { get; set; } 
 <#}#>
@@ -118,7 +119,7 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure.Models
 	        }
 
 			
-			public I<#=name#>OrderContext Filter(IEnumerable<IPropertyFilter> filters) 
+			public I<#=name#>QueryContext Filter(IEnumerable<IPropertyFilter> filters) 
 			{
 				return this;	
 			}
