--- a/Genie/Templates/Infrastructure/Interfaces/IOperation.tt
+++ b/Genie/Templates/Infrastructure/Interfaces/IOperation.tt
@@ -1,6 +1,6 @@
 ﻿<#@ template language="C#" #>
 <#@ import namespace="Genie.Base" #>
-using <#=GenerationContext.BaseNamespace#>.Infrastructure.Models;
+using <#=GenerationContext.BaseNamespace#>.Infrastructure.Models.Concrete;
 
 namespace <#=GenerationContext.BaseNamespace#>.Infrastructure.Interfaces
 {
