--- a/Genie/Templates/Infrastructure/Interfaces/IRepositoryFactory.tt
+++ b/Genie/Templates/Infrastructure/Interfaces/IRepositoryFactory.tt
@@ -1,7 +1,7 @@
 ﻿<#@ template language="C#" #>
 <#@ import namespace="Genie.Base" #>
 
-using <#=GenerationContext.BaseNamespace#>.Infrastructure.Models;
+using <#=GenerationContext.BaseNamespace#>.Infrastructure.Models.Concrete;
 
 namespace <#=GenerationContext.BaseNamespace#>.Infrastructure.Interfaces
 {
