--- a/Genie/Templates/Infrastructure/Models/Concrete/BaseModel.tt
+++ b/Genie/Templates/Infrastructure/Models/Concrete/BaseModel.tt
@@ -3,7 +3,7 @@
 using System.Collections.Generic;
 using <#=GenerationContext.BaseNamespace#>.Infrastructure.Interfaces;
 
-namespace <#=GenerationContext.BaseNamespace#>.Infrastructure.Models
+namespace <#=GenerationContext.BaseNamespace#>.Infrastructure.Models.Concrete
 {
     internal enum ModelStatus
     {
@@ -14,7 +14,6 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure.Models
 
     public abstract class BaseModel
     {
-        protected BaseModel() { UpdatedProperties = new HashSet<string>(); DatabaseModelStatus = ModelStatus.JustInMemory; }
         internal HashSet<string> UpdatedProperties { get; set; }
         internal ModelStatus DatabaseModelStatus { get; set; }
         internal IUnitOfWork DatabaseUnitOfWork { get; set; }
@@ -26,6 +25,9 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure.Models
         /// <param name="propertyName">The updated property name</param>
 		protected void __Updated(string propertyName) 
 		{
+		    if(UpdatedProperties == null)
+                UpdatedProperties = new HashSet<string>();
+
 			if( DatabaseModelStatus == ModelStatus.Retrieved ) 
 				UpdatedProperties.Add(propertyName);
 		}
