--- a/Genie/Templates/Infrastructure/Operation.tt
+++ b/Genie/Templates/Infrastructure/Operation.tt
@@ -3,7 +3,7 @@
 <#@ import namespace="Genie.Extensions"#>
 
 using <#=GenerationContext.BaseNamespace#>.Infrastructure.Interfaces;
-using <#=GenerationContext.BaseNamespace#>.Infrastructure.Models;
+using <#=GenerationContext.BaseNamespace#>.Infrastructure.Models.Concrete;
 
 namespace <#=GenerationContext.BaseNamespace#>.Infrastructure
 {
