--- a/Genie/Templates/Infrastructure/Models/Concrete/Context/ModelQueryContext.tt
+++ b/Genie/Templates/Infrastructure/Models/Concrete/Context/ModelQueryContext.tt
@@ -12,17 +12,11 @@ using <#=GenerationContext.BaseNamespace#>.Infrastructure.Models.Abstract.Contex
 
 namespace <#=GenerationContext.BaseNamespace#>.Infrastructure.Models.Concrete.Context
 {
-    internal class <#=_name#>QueryContext: I<#=_name#>QueryContext
+    internal class <#=_name#>QueryContext: BaseQueryContext, I<#=_name#>QueryContext
 	{
 		private I<#=_name#>FilterContext _where; 
 	    private I<#=_name#>OrderContext _order;
 		private readonly I<#=_name#>Repository _repo;
-
-        private int? _page;
-        private int? _pageSize;
-        private int? _limit;
-        private int? _skip;
-        private int? _take;
 
         public I<#=_name#>QueryContext Page(int pageSize, int page)
         {
@@ -85,5 +79,33 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure.Models.Concrete.Co
 	            Transaction = transaction
 	        };
 	    }
+
+		protected override bool? IsQuoted(string propertyName) 
+		{
+<#var lit = _attributes.Where(a => a.IsLiteralType).ToList();#>
+<#var nonLit = _attributes.Where(a => !a.IsLiteralType).ToList();#>
+
+<#if(_attributes.Count() == lit.Count || nonLit.Count < 1){#>
+			return true;
+<#}#>
+<#else if(_attributes.Count() == lit.Count || lit.Count < 1){#>
+			return false;
+<#}#>
+<#else#>
+<#{#>
+			switch(propertyName) 
+			{
+<#foreach(var a in lit){#>
+				case "<#=a.Name#>":
+<#}#>
+					return true;
+<#foreach(var a in nonLit){#>
+				case "<#=a.Name#>":
+<#}#>
+					return false;
+				default: return null;
+			}
+<#}#>
+		}
 	}
 }
