--- a/Genie/Templates/Infrastructure/Models/Concrete/BaseModel.tt
+++ b/Genie/Templates/Infrastructure/Models/Concrete/BaseModel.tt
@@ -2,6 +2,7 @@
 <#@ import namespace="Genie.Base" #>
 using System.Collections.Generic;
 using <#=GenerationContext.BaseNamespace#>.Infrastructure.Interfaces;
+using <#=GenerationContext.BaseNamespace#>.Infrastructure.Actions.Concrete;
 
 namespace <#=GenerationContext.BaseNamespace#>.Infrastructure.Models.Concrete
 {
@@ -9,7 +10,8 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure.Models.Concrete
     {
         JustInMemory = 1,
         Retrieved = 2,
-        Deleted = 3
+        Deleted = 3,
+        ToAdd = 4
     }
 
     public abstract class BaseModel
@@ -17,6 +19,7 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure.Models.Concrete
         internal HashSet<string> UpdatedProperties { get; set; }
         internal ModelStatus DatabaseModelStatus { get; set; }
         internal IUnitOfWork DatabaseUnitOfWork { get; set; }
+        internal List<IAddAction> ActionsToRunWhenAdding { get; set; } 
         internal abstract void SetId(object id);
 
 		/// <summary>
