--- a/Genie/Templates/Dapper/SqlMapperExtensions.tt
+++ b/Genie/Templates/Dapper/SqlMapperExtensions.tt
@@ -126,11 +126,13 @@ namespace <#=GenerationContext.BaseNamespace#>.Dapper
                         if (first)
                         {
                             first = false;
+                            previous = current;
                             continue;
                         }
 
                         if (AndOrOr(previous))
                         {
+                            previous = current;
                             continue;
                         }
 
