--- a/Genie/Templates/Infrastructure/Filters/Abstract/IStringFilter.tt
+++ b/Genie/Templates/Infrastructure/Filters/Abstract/IStringFilter.tt
@@ -15,6 +15,7 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure.Filters.Abstract
         IExpressionJoin<T, TQ> IsNotEmpty();
         IExpressionJoin<T, TQ> IsNull();
         IExpressionJoin<T, TQ> IsNotNull();
+        IExpressionJoin<T, TQ> In(params string[] items);
     }
 }
 
