--- a/Genie/Templates/Infrastructure/Filters/Concrete/DateFilter.tt
+++ b/Genie/Templates/Infrastructure/Filters/Concrete/DateFilter.tt
@@ -1,6 +1,7 @@
 ﻿<#@ template language="C#" #>
 <#@ import namespace="Genie.Base" #>
 using System;
+using System.Linq;
 using <#=GenerationContext.BaseNamespace#>.Infrastructure.Filters.Abstract;
 
 namespace <#=GenerationContext.BaseNamespace#>.Infrastructure.Filters.Concrete
@@ -69,6 +70,12 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure.Filters.Concrete
         public IExpressionJoin<T, TQ> IsNotNull()
         {
             _parent.Add(QueryMaker.IsNotNull(_propertyName));
+            return new ExpressionJoin<T, TQ>(_parent, _q);
+        }
+
+        public IExpressionJoin<T, TQ> In(params DateTime[] items)
+        {
+            _parent.Add(QueryMaker.In(_propertyName, items.Cast<object>().ToArray(), true));
             return new ExpressionJoin<T, TQ>(_parent, _q);
         }
     }
