--- a/Genie/Templates/Infrastructure/UnitOfWork.tt
+++ b/Genie/Templates/Infrastructure/UnitOfWork.tt
@@ -108,6 +108,7 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure
                             if (deleted) { operation.Object.DatabaseModelStatus = ModelStatus.Deleted; }
                         }
 					}
+                    _operations.Clear();
                 }
             }
             catch (Exception e)
