--- a/Genie/Templates/Infrastructure/Filters/Concrete/StringFilter.tt
+++ b/Genie/Templates/Infrastructure/Filters/Concrete/StringFilter.tt
@@ -1,5 +1,6 @@
 ﻿<#@ template language="C#" #>
 <#@ import namespace="Genie.Base" #>
+using System.Linq;
 using <#=GenerationContext.BaseNamespace#>.Infrastructure.Filters.Abstract;
 
 namespace <#=GenerationContext.BaseNamespace#>.Infrastructure.Filters.Concrete
@@ -80,6 +81,12 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure.Filters.Concrete
         public IExpressionJoin<T, TQ> IsNotNull()
         {
             _parent.Add(QueryMaker.IsNotNull(_propertyName));
+            return new ExpressionJoin<T, TQ>(_parent, _q);
+        }
+
+        public IExpressionJoin<T, TQ> In(params string[] items)
+        {
+            _parent.Add(QueryMaker.In(_propertyName, items.Cast<object>().ToArray(), true));
             return new ExpressionJoin<T, TQ>(_parent, _q);
         }
     }
