--- a/Genie/Templates/Infrastructure/Interfaces/IRepository.tt
+++ b/Genie/Templates/Infrastructure/Interfaces/IRepository.tt
@@ -14,7 +14,9 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure.Interfaces
         IDapperContext Context { get; }
 
         void Add(T entity, IDbTransaction transaction = null, int? commandTimeout = null);
+        void Add(IEnumerable<T> entities, IDbTransaction transaction = null, int? commandTimeout = null);
         void Remove(T entity, IDbTransaction transaction = null, int? commandTimeout = null);
+        void Remove(IEnumerable<T> entity, IDbTransaction transaction = null, int? commandTimeout = null);
 
         IEnumerable<T> Get(IRepoQuery query);
 	    int Count(IRepoQuery query);
