--- a/Genie/Templates/Infrastructure/Models/Concrete/BaseModel.tt
+++ b/Genie/Templates/Infrastructure/Models/Concrete/BaseModel.tt
@@ -2,7 +2,7 @@
 <#@ import namespace="Genie.Base" #>
 using System.Collections.Generic;
 using <#=GenerationContext.BaseNamespace#>.Infrastructure.Interfaces;
-using <#=GenerationContext.BaseNamespace#>.Infrastructure.Actions.Concrete;
+using <#=GenerationContext.BaseNamespace#>.Infrastructure.Actions.Abstract;
 
 namespace <#=GenerationContext.BaseNamespace#>.Infrastructure.Models.Concrete
 {
