--- a/Genie/Templates/Infrastructure/Models/Concrete/Context/ModelQueryContext.tt
+++ b/Genie/Templates/Infrastructure/Models/Concrete/Context/ModelQueryContext.tt
@@ -61,6 +61,7 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure.Models.Concrete.Co
 
 		public I<#=_name#>QueryContext Filter(IEnumerable<IPropertyFilter> filters) 
 		{
+            ProcessFilter(Where.GetFilterExpressions(), filters);
 			return this;	
 		}
 
@@ -80,32 +81,24 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure.Models.Concrete.Co
 	        };
 	    }
 
-		protected override bool? IsQuoted(string propertyName) 
+		protected override bool? IsQuoted(ref string propertyName) 
 		{
 <#var lit = _attributes.Where(a => a.IsLiteralType).ToList();#>
 <#var nonLit = _attributes.Where(a => !a.IsLiteralType).ToList();#>
-
-<#if(_attributes.Count() == lit.Count || nonLit.Count < 1){#>
-			return true;
-<#}#>
-<#else if(_attributes.Count() == lit.Count || lit.Count < 1){#>
-			return false;
-<#}#>
-<#else#>
-<#{#>
-			switch(propertyName) 
+			switch(propertyName.ToLower()) 
 			{
 <#foreach(var a in lit){#>
-				case "<#=a.Name#>":
+				case "<#=a.Name.ToLower()#>":
+                    propertyName = "<#=a.Name#>";
+                    return true;
 <#}#>
-					return true;
 <#foreach(var a in nonLit){#>
-				case "<#=a.Name#>":
+				case "<#=a.Name.ToLower()#>":
+                    propertyName = "<#=a.Name#>";
+                    return false;
 <#}#>
-					return false;
 				default: return null;
 			}
-<#}#>
 		}
 	}
 }
