--- a/Genie/Templates/Dapper/ISqlAdapter.tt
+++ b/Genie/Templates/Dapper/ISqlAdapter.tt
@@ -9,7 +9,7 @@ namespace <#=GenerationContext.BaseNamespace#>.Dapper
 {
 	public interface ISqlAdapter
 	{
-		int Insert(IDbConnection connection, IDbTransaction transaction, int? commandTimeout, String tableName, string columnList, string parameterList, IEnumerable<PropertyInfo> keyProperties, object entityToInsert);
+		int? Insert(IDbConnection connection, IDbTransaction transaction, int? commandTimeout, String tableName, string columnList, string parameterList, List<PropertyInfo> keyProperties, object entityToInsert);
 	}
 
 }
