--- a/Genie/Templates/Dapper/SqlServerAdapter.tt
+++ b/Genie/Templates/Dapper/SqlServerAdapter.tt
@@ -10,18 +10,25 @@ namespace <#=GenerationContext.BaseNamespace#>.Dapper
 {
 	public class SqlServerAdapter : ISqlAdapter
     {
-        public int Insert(IDbConnection connection, IDbTransaction transaction, int? commandTimeout, String tableName, string columnList, string parameterList, IEnumerable<PropertyInfo> keyProperties, object entityToInsert)
+        public int? Insert(IDbConnection connection, IDbTransaction transaction, int? commandTimeout, String tableName, string columnList, string parameterList, List<PropertyInfo> keyProperties, object entityToInsert)
         {
-            string cmd = String.Format("insert into {0} ({1}) values ({2})", tableName, columnList, parameterList);
+            var cmd = string.Format("insert into {0} ({1}) values ({2})", tableName, columnList, parameterList);
+            connection.Execute(cmd, entityToInsert, transaction, commandTimeout);
+            var r = connection.Query("select @@IDENTITY id", transaction: transaction, commandTimeout: commandTimeout).ToList();
+            if (r.Any())
+            {
+                try
+                {
+                    var id = (int)r.First().id;
+                    return id;
+                }
+                catch (Exception)
+                {
 
-            connection.Execute(cmd, entityToInsert, transaction: transaction, commandTimeout: commandTimeout);
-
-            //NOTE: would prefer to use IDENT_CURRENT('tablename') or IDENT_SCOPE but these are not available on SQLCE
-            var r = connection.Query("select @@IDENTITY id", transaction: transaction, commandTimeout: commandTimeout);
-            int id = (int)r.First().id;
-            if (keyProperties.Any())
-                keyProperties.First().SetValue(entityToInsert, id, null);
-            return id;
+                    return null;
+                }
+            }
+            return null;
         }
     }
 }
