--- a/Genie/Templates/Infrastructure/UnitOfWork.tt
+++ b/Genie/Templates/Infrastructure/UnitOfWork.tt
@@ -80,7 +80,8 @@ namespace <#=GenerationContext.BaseNamespace#>.Infrastructure
                         foreach (var operation in toAdd)
                         {
                             var newId = connection.Insert(operation.Object);
-                            operation.Object.SetId((int)newId);
+                             if(newId != null)
+                                operation.Object.SetId((int)newId);
                             operation.Object.DatabaseModelStatus = ModelStatus.Retrieved;
                             if (operation.Object.ActionsToRunWhenAdding != null && operation.Object.ActionsToRunWhenAdding.Count > 0)
                             {
